[gd_scene load_steps=31 format=2]

[ext_resource path="res://files/scenes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://files/TextSceneNew/TextSystem.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/menu/buttonhl.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/menu/confirmpanel.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/menu/buttonnorm.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/menu/buttonpressed.png" type="Texture" id=6]
[ext_resource path="res://files/SFX/black.png" type="Texture" id=10]
[ext_resource path="res://files/SFX/white.png" type="Texture" id=11]
[ext_resource path="res://assets/images/gui/text scene/textfieldpanel.png" type="Texture" id=12]
[ext_resource path="res://assets/fonts/RoundoShadow40.font" type="BitmapFont" id=13]
[ext_resource path="res://assets/images/gui/text scene/textbuttonhl.png" type="Texture" id=14]
[ext_resource path="res://assets/images/gui/text scene/textbuttonpressed.png" type="Texture" id=15]
[ext_resource path="res://assets/images/gui/text scene/textbutton.png" type="Texture" id=16]
[ext_resource path="res://assets/images/gui/text scene/namepanel.png" type="Texture" id=17]
[ext_resource path="res://Roundo-Medium.otf" type="DynamicFontData" id=18]
[ext_resource path="res://assets/images/gui/text scene/portraitpanel.png" type="Texture" id=20]
[ext_resource path="res://assets/images/gui/buildings/button.png" type="Texture" id=21]
[ext_resource path="res://assets/images/gui/buildings/buttonpress.png" type="Texture" id=22]
[ext_resource path="res://assets/images/gui/buildings/buttonhl.png" type="Texture" id=23]
[ext_resource path="res://files/scenes/indexed_button.gd" type="Script" id=24]
[ext_resource path="res://assets/images/gui/text scene/logpanel.png" type="Texture" id=25]
[ext_resource path="res://files/scenes/MenuPanel.tscn" type="PackedScene" id=26]
[ext_resource path="res://unused/TextScene/VideoBunch.gd" type="Script" id=27]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 138, 68 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 138, 68 )

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 138, 68 )

[sub_resource type="DynamicFont" id=6]
size = 32
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 25 )
region_rect = Rect2( 0, 0, 1171, 788 )

[node name="TextSystem" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="VideoBunch" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="VideoPlayer" parent="VideoBunch"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="VideoPlayer" parent="VideoBunch"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
expand = true
stretch_mode = 7

[node name="CharImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackScreen" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 10 )
expand = true

[node name="WhiteScreenGFX" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1921.0
margin_bottom = 1080.0
texture = ExtResource( 11 )
expand = true

[node name="Panel" type="TextureRect" parent="."]
margin_left = 448.0
margin_top = 849.0
margin_right = 1718.0
margin_bottom = 1088.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
self_modulate = Color( 0.421875, 0.410339, 0.410339, 0.425412 )
margin_top = -38.0
margin_right = 1263.0
margin_bottom = 230.0

[node name="DisplayText" type="RichTextLabel" parent="Panel"]
modulate = Color( 0.953125, 0.953125, 0.953125, 1 )
margin_left = 35.0
margin_top = 30.0
margin_right = 1064.0
margin_bottom = 212.0
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true

[node name="Log" type="Button" parent="Panel"]
margin_left = 1095.0
margin_top = 32.0
margin_right = 1233.0
margin_bottom = 100.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Log"

[node name="Options" type="Button" parent="Panel"]
margin_left = 1095.0
margin_top = 131.0
margin_right = 1233.0
margin_bottom = 199.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Options"

[node name="DisplayName" type="TextureRect" parent="Panel"]
margin_left = -12.0
margin_top = -62.0
margin_right = 441.0
margin_bottom = 20.0
texture = ExtResource( 17 )

[node name="Label" type="Label" parent="Panel/DisplayName"]
margin_left = 104.0
margin_top = 32.0
margin_right = 381.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.823822, 0.0195313, 1 )

[node name="CharPortrait" type="TextureRect" parent="Panel"]
margin_left = -310.0
margin_top = -164.0
margin_right = -14.0
margin_bottom = 201.0
stretch_mode = 7

[node name="Panel" type="TextureRect" parent="Panel/CharPortrait"]
margin_left = -19.0
margin_top = -15.0
margin_right = 312.0
margin_bottom = 395.0
texture = ExtResource( 20 )

[node name="ChoicePanel" type="TextureRect" parent="."]
visible = false
margin_left = 668.0
margin_top = 89.0
margin_right = 1317.0
margin_bottom = 877.0

[node name="VBoxContainer" type="VBoxContainer" parent="ChoicePanel"]
margin_left = 6.0
margin_top = 82.0
margin_right = 561.0
margin_bottom = 721.0
custom_constants/separation = 18

[node name="Button" type="TextureButton" parent="ChoicePanel/VBoxContainer"]
visible = false
margin_right = 555.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
action_mode = 0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
expand = true
script = ExtResource( 24 )

[node name="Label" type="Label" parent="ChoicePanel/VBoxContainer/Button"]
margin_left = 36.0
margin_top = 17.0
margin_right = 520.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 13 )
text = "Option"
align = 1
valign = 1

[node name="LogPanel" type="Panel" parent="."]
visible = false
margin_left = 358.0
margin_top = 30.0
margin_right = 1529.0
margin_bottom = 818.0
custom_styles/panel = SubResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="LogPanel"]
margin_left = 39.0
margin_top = 145.0
margin_right = 1138.0
margin_bottom = 735.0
custom_fonts/normal_font = ExtResource( 13 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie dolor et commodo pulvinar. Nam ac nisl quis mauris malesuada commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam semper venenatis elit, eget venenatis velit dictum mattis. Etiam pharetra erat sed dui eleifend, et vehicula nulla faucibus. Pellentesque ut dolor vel augue aliquet tincidunt eu vitae purus. Nullam tristique posuere dolor vel tincidunt. Sed sit amet ante quis lectus fringilla mollis. Quisque ac nisl purus. Nullam gravida pretium nisi. Maecenas imperdiet sed tortor eu interdum.

Aliquam laoreet placerat nulla, in auctor velit scelerisque lacinia. Vivamus pharetra nec enim vel tempor. Nullam nibh lectus, fermentum suscipit nunc id, volutpat ultricies metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id ultricies urna, non fermentum odio. Curabitur leo neque, convallis sit amet turpis vitae, pellentesque hendrerit quam. Nulla facilisi. Cras scelerisque bibendum facilisis. Cras tristique facilisis erat. Vivamus sit amet eros molestie, scelerisque lectus sed, sodales orci. Quisque ut libero sit amet quam pharetra malesuada a sit amet magna.

Nunc justo nunc, congue eu tincidunt eu, varius vel tellus. Donec bibendum elementum auctor. Morbi felis nisi, posuere vitae nibh et, sagittis volutpat mauris. Morbi bibendum faucibus nulla quis tempor. Etiam porttitor quam sed malesuada sollicitudin. Curabitur porta elementum quam ac lacinia. Mauris luctus vel turpis vel rhoncus. In ex risus, elementum non finibus ut, auctor non ipsum. Proin dictum gravida est ac efficitur. Nam quis sapien cursus, rhoncus diam aliquet, semper nibh. Suspendisse potenti. Vestibulum commodo, justo ac dapibus molestie, libero tellus cursus tortor, a consectetur arcu odio in est. Donec quis elit a erat sodales vulputate.

Etiam sodales, turpis id finibus tincidunt, urna augue cursus magna, quis rutrum felis mi sed arcu. Etiam viverra ac est vestibulum posuere. Suspendisse eget libero ac velit rutrum semper at a augue. Praesent lorem magna, lobortis eget justo a, accumsan bibendum ex. Pellentesque eget leo et mi aliquet sagittis ut sit amet libero. Praesent sagittis vel augue non aliquet. Vivamus posuere mauris ut lobortis facilisis. Mauris eget malesuada lorem. Sed condimentum tincidunt dignissim. Nullam dapibus mauris eget orci aliquam, at lacinia augue porta. Proin mattis sem et vulputate dictum. Sed at erat sem. Sed lacinia lectus non pretium convallis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Quisque quis leo ut elit laoreet tincidunt et in velit.

In aliquam augue tellus, ut aliquam nisi condimentum id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc eros enim, semper ut condimentum ultrices, placerat et turpis. Proin at felis sed ex malesuada congue. Ut quis feugiat urna, nec sodales arcu. Morbi dignissim massa felis, in varius massa faucibus vitae. Proin ut eleifend felis. Etiam imperdiet velit non dictum consectetur. Maecenas id mattis risus. Cras quis ante mollis, pulvinar eros eu, dapibus dui. Integer massa est, scelerisque at placerat eu, interdum eget urna. Vestibulum nunc justo, tristique vitae eros non, efficitur auctor lorem. Praesent porttitor nibh vitae purus aliquet, quis dignissim lorem laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in arcu sollicitudin, bibendum arcu sed, fringilla nibh. Quisque pulvinar convallis elit quis aliquam."
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas molestie dolor et commodo pulvinar. Nam ac nisl quis mauris malesuada commodo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam semper venenatis elit, eget venenatis velit dictum mattis. Etiam pharetra erat sed dui eleifend, et vehicula nulla faucibus. Pellentesque ut dolor vel augue aliquet tincidunt eu vitae purus. Nullam tristique posuere dolor vel tincidunt. Sed sit amet ante quis lectus fringilla mollis. Quisque ac nisl purus. Nullam gravida pretium nisi. Maecenas imperdiet sed tortor eu interdum.

Aliquam laoreet placerat nulla, in auctor velit scelerisque lacinia. Vivamus pharetra nec enim vel tempor. Nullam nibh lectus, fermentum suscipit nunc id, volutpat ultricies metus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed id ultricies urna, non fermentum odio. Curabitur leo neque, convallis sit amet turpis vitae, pellentesque hendrerit quam. Nulla facilisi. Cras scelerisque bibendum facilisis. Cras tristique facilisis erat. Vivamus sit amet eros molestie, scelerisque lectus sed, sodales orci. Quisque ut libero sit amet quam pharetra malesuada a sit amet magna.

Nunc justo nunc, congue eu tincidunt eu, varius vel tellus. Donec bibendum elementum auctor. Morbi felis nisi, posuere vitae nibh et, sagittis volutpat mauris. Morbi bibendum faucibus nulla quis tempor. Etiam porttitor quam sed malesuada sollicitudin. Curabitur porta elementum quam ac lacinia. Mauris luctus vel turpis vel rhoncus. In ex risus, elementum non finibus ut, auctor non ipsum. Proin dictum gravida est ac efficitur. Nam quis sapien cursus, rhoncus diam aliquet, semper nibh. Suspendisse potenti. Vestibulum commodo, justo ac dapibus molestie, libero tellus cursus tortor, a consectetur arcu odio in est. Donec quis elit a erat sodales vulputate.

Etiam sodales, turpis id finibus tincidunt, urna augue cursus magna, quis rutrum felis mi sed arcu. Etiam viverra ac est vestibulum posuere. Suspendisse eget libero ac velit rutrum semper at a augue. Praesent lorem magna, lobortis eget justo a, accumsan bibendum ex. Pellentesque eget leo et mi aliquet sagittis ut sit amet libero. Praesent sagittis vel augue non aliquet. Vivamus posuere mauris ut lobortis facilisis. Mauris eget malesuada lorem. Sed condimentum tincidunt dignissim. Nullam dapibus mauris eget orci aliquam, at lacinia augue porta. Proin mattis sem et vulputate dictum. Sed at erat sem. Sed lacinia lectus non pretium convallis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Quisque quis leo ut elit laoreet tincidunt et in velit.

In aliquam augue tellus, ut aliquam nisi condimentum id. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc eros enim, semper ut condimentum ultrices, placerat et turpis. Proin at felis sed ex malesuada congue. Ut quis feugiat urna, nec sodales arcu. Morbi dignissim massa felis, in varius massa faucibus vitae. Proin ut eleifend felis. Etiam imperdiet velit non dictum consectetur. Maecenas id mattis risus. Cras quis ante mollis, pulvinar eros eu, dapibus dui. Integer massa est, scelerisque at placerat eu, interdum eget urna. Vestibulum nunc justo, tristique vitae eros non, efficitur auctor lorem. Praesent porttitor nibh vitae purus aliquet, quis dignissim lorem laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed in arcu sollicitudin, bibendum arcu sed, fringilla nibh. Quisque pulvinar convallis elit quis aliquam."

[node name="MenuPanel" parent="." instance=ExtResource( 26 )]
visible = false
margin_left = 740.0
margin_top = 160.0
margin_right = 1106.0
margin_bottom = 602.0

[node name="ClosePanel" type="Panel" parent="."]
visible = false
margin_left = 721.0
margin_top = 331.0
margin_right = 1193.0
margin_bottom = 570.0

[node name="TextureRect" type="TextureRect" parent="ClosePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="ClosePanel"]
margin_left = 49.0
margin_top = 58.0
margin_right = 416.0
margin_bottom = 162.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "Skip this scene?"
text = "Skip this scene?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="TextureButton" parent="ClosePanel"]
margin_left = 30.0
margin_top = 164.0
margin_right = 192.0
margin_bottom = 211.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="ClosePanel/Confirm"]
margin_left = 13.0
margin_top = 13.0
margin_right = 136.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONFIRM"
align = 1

[node name="Cancel" type="TextureButton" parent="ClosePanel"]
margin_left = 277.0
margin_top = 164.0
margin_right = 439.0
margin_bottom = 211.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="ClosePanel/Cancel"]
margin_left = 13.0
margin_top = 13.0
margin_right = 136.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CANCEL"
align = 1
